Add HEALTHCHECK to dockerfile

--- a/master/Dockerfile
+++ b/master/Dockerfile
@@ -3,6 +3,7 @@ FROM nvtienanh/spark-base:${SPARK_BASE}
 
 LABEL MAINTAINER = "Anh Nguyen <nvtienanh@gmail.com>" 
 
+HEALTHCHECK CMD curl -f http://localhost:8080/ || exit 1
 COPY master.sh /
 
 ENV SPARK_MASTER_PORT 7077
