--- a/.github/workflows/deploy_docker.yml
+++ b/.github/workflows/deploy_docker.yml
@@ -3,7 +3,7 @@ name: Docker Image CI
 on: 
   push:
     branches:
-      - master
+      - 2.4.4-alpine
 
 jobs:
 
@@ -19,4 +19,4 @@ jobs:
     - name: Login to DockerHub
       run: docker login -u="nvtienanh" -p="${{ secrets.DOCKER_PASSWORD }}"
     - name: Deploy Docker image
-      run: echo $(ls -a)
+      run: chmod +x deploy.sh && ./deploy.sh ${GITHUB_REF##*/}
