--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: CI
 
 on: 
   push:
@@ -7,15 +7,13 @@ on:
 
 jobs:
 
-  build:
+  deploy:
 
     runs-on: ubuntu-latest
 
     steps:
     - name: Git checkout
       uses: actions/checkout@v1
-    - name: Branch name
-      run: echo running on branch ${GITHUB_REF##*/}
     - name: Login to DockerHub
       run: docker login -u="nvtienanh" -p="${{ secrets.DOCKER_PASSWORD }}"
     - name: Deploy Docker image
